"Maintenance: npm update, npm audit, update package author, add save script."

--- a/package.json
+++ b/package.json
@@ -4,14 +4,15 @@
   "description": "Save arbitrary dataURL (data URI) to a file, with mime support and standard node callback.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "save": "git add .; git commit -m 'New Release'; git push; npm version patch; npm publish; git push;"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/fantasyui-com/data-url-to-file.git"
   },
   "keywords": [],
-  "author": "",
+  "author": "fantasyui.com <fantasyui.com@gmail.com>",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/fantasyui-com/data-url-to-file/issues"
